<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Goggles</string>
    <string name="hello_world">Hello Goggles &amp; Github world :D!</string>
    <string name="menu_settings">Settings</string>
    <string name="button_sandbox_aleja">Alex\'s Sandbox</string>
    <string name="button_sandbox_aotuo">Aotuo\'s Sandbox</string>
    <string name="button_sandbox_jakub">Jakub\'s Sandbox</string>
    <string name="button_sandbox_sebas">Sebastian\'s Sandbox</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_aleja_sandbox">Alejandro\'s Sandbox</string>
    <string name="title_activity_aotuo_sandbox">Aotuo\'s Sandbox</string>
    <string name="title_activity_jakub_sandbox">Jakub\'s Sandbox</string>
    <string name="title_activity_sebas_sandbox">Sebastian\'s Sandbox</string>
    <string name="button_goggles_app">Final Goggles App</string>
    <string name="title_activity_goggles_main">Goggles Main</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="tab_view_activity">TabView</string>    
    <string name="POI">Points of Interest</string>
    <string name="CurrentLocation">Current Location</string>
    <string name="FriendsLocation">Friend\'s Location</string>
    <string name="Messages">Messages</string>
    <string name="title_activity_poi">POIActivity</string>
    <string name="title_activity_current_location">CurrentLocationActivity</string>
    <string name="title_activity_friends_location">FriendsLocationActivity</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="POIs">Points of Interest</string>
    <string name="RTMM">Return to Main Menu</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="title_activity_send_message">SendMessage</string>
    <string name="project_id">51661401ed3d7657b60014bc</string>
    <string name="token">zvS2csbud0tr6zgNbmjo9mSPByU</string>
</resources>