<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:orientation="vertical"
        android:overScrollMode="always"
        android:scrollbars="vertical"
        tools:context=".MainActivity" >

        <Button
            android:id="@+id/but_aleja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sandbox_aleja" />

        <Button
            android:id="@+id/but_aotuo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sandbox_aotuo" />

        <Button
            android:id="@+id/but_jakub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sandbox_jakub" />

        <Button
            android:id="@+id/but_sebas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_sandbox_sebas" />

        <Button
            android:id="@+id/but_goggles_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_goggles_app" />
    </LinearLayout>

</ScrollView>