<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" >

    <Button
        android:id="@+id/POI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="29dp"
        android:padding="10dp"
        android:text="@string/POI"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/POI"
        android:layout_marginLeft="30dp"
        android:padding="10dp"
        android:text="@string/Messages"
        android:textStyle="bold" />

    <Button
        android:id="@+id/FriendsLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Messages"
        android:layout_marginLeft="30dp"
        android:padding="10dp"
        android:text="@string/FriendsLocation"
        android:textStyle="bold" />

    <Button
        android:id="@+id/CurrentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/FriendsLocation"
        android:layout_marginLeft="30dp"
        android:padding="10dp"
        android:text="@string/CurrentLocation"
        android:textStyle="bold" />

</RelativeLayout>